# bigfish

./: .gitignore  Cargo.toml  build.rs
app/: pubspec.yaml
app/lib/: main.dart  native.dart  slotmap.dart  world.dart
app/shaders/: Shaders.metal  blit.slang  compute.slang  raster.slang
bigfish_macros/: Cargo.toml
bigfish_macros/src/: lib.rs
cli/: pubspec.yaml
dart_dll/include/: dart_dll.h
src/: bindings.rs  dart.rs  dart_api.rs  gpu.rs  lib.rs  main.rs  window.rs
src/gpu/: command_buffer.rs  compute_encoder.rs  gpu.rs  mod.rs  render_encoder.rs  resources.rs  types.rs
